...
    <string name="menu_vocabulary">Vocabulary</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_annotations">Annotations</string>
    <string name="menu_config">Configuration</string>
    <string name="menu_manga_library_type">Grid type</string>
    <string name="menu_book_library_type">Grid type</string>


    <!-- STATISTICS -->
    <string name="statistics_sector_system">Statistics</string>
    <string name="statistics_sector_manga">Manga / Comic</string>
...
    <!-- UPDATE POPUP TITLES -->
    <string name="popup_update_title">Update App</string>
    <string name="popup_update_description">Downloading…</string>

    <!-- ORDER -->
    <string name="option_order_none">None</string>
    <string name="option_order_name">By name</string>
    <string name="option_order_date">By date</string>
    <string name="option_order_access">By Last access</string>
    <string name="option_order_favorite">Favorite first</string>
    <string name="option_order_author">By author</string>
    <string name="option_order_genre">By genre</string>
    <string name="option_order_series">By series</string>
    <string name="option_order_description">By description</string>
    <string name="option_order_frequency">By frequency</string>

    <!-- LANGUAGE -->
    <string name="languages_choice">Select language</string>
    <string name="languages_description">Language: %1$s</string>
...
    <string name="menu_manga_reading_chapters_menu">Chapters list</string>
    <string name="menu_manga_reading_save_share_image">Save/Share image</string>
    <string name="menu_manga_reading_favorite">Favorite</string>
    <string name="menu_manga_reading_book_mark">Book mark</string>
    <string name="menu_manga_reading_order">List order</string>
    <string name="menu_manga_reading_order_change">Sort: %s</string>
    <string name="menu_manga_vocabulary_import">Importing vocabulary</string>

    <string name="menu_manga_reading_floating">Floating popup</string>
    <string name="menu_manga_reading_floating_buttons">Floating buttons</string>

    <string name="menu_manga_reading_options">Reading options</string>
    <string name="menu_manga_reading_show_clock_and_battery">Clock and battery percent</string>
...
    <string name="switch_next_book_last_comic">This is the last file.</string>

    <!-- LIBRARY - Manga / Comic -->
    <string name="manga_library_last_access">Last access</string>
    <string name="manga_library_menu_favorite_add">Add favorite</string>
    <string name="manga_library_menu_favorite_remove">Remove favorite</string>
    <string name="manga_library_menu_delete">Delete</string>
    <string name="manga_library_menu_delete_description">Do you really want to delete the file?</string>
    <string name="manga_library_menu_clear">Clear history</string>
    <string name="manga_library_default">Default</string>
    <string name="manga_library_menu_copy">Copy</string>

    <string name="library_separator_unread">Unread</string>
...
    </string-array>

    <string name="book_library_line_publisher">Published:</string>
    <string name="book_library_line_authors">Authors:</string>

    <!-- POPUP LIBRARY - Manga / Comic -->
    <string name="menu_manga_config_clear_progress">Clear progress</string>
    <string name="menu_manga_config_delete">Delete</string>
    <string name="menu_manga_config_detail">Manga / Comic detail</string>
    <string name="menu_manga_config_book_mark">Book mark</string>

    <string name="popup_library_manga_tab_item_ordering">Order</string>
    <string name="popup_library_manga_tab_item_filter">Filter</string>
    <string name="popup_library_manga_tab_item_type">Grid</string>

    <string name="popup_library_manga_order_name">For name</string>
    <string name="popup_library_manga_order_date">For date</string>
    <string name="popup_library_manga_order_access">For last access</string>
    <string name="popup_library_manga_order_favorite">Favorite first</string>
    <string name="popup_library_manga_order_genre">For genre</string>
    <string name="popup_library_manga_order_author">For author</string>
    <string name="popup_library_manga_order_series">For series</string>

    <string name="popup_library_manga_filter_favorite">Favorite</string>
    <string name="popup_library_manga_filter_reading">Reading</string>

    <string name="popup_library_manga_type_grid_big">Grid big</string>
    <string name="popup_library_manga_type_grid_medium">Grid medium</string>
    <string name="popup_library_manga_type_grid_small">Grid small</string>
    <string name="popup_library_manga_type_separator_big">Grid big with separator</string>
    <string name="popup_library_manga_type_separator_medium">Grid medium with separator</string>
    <string name="popup_library_manga_type_separator_carousel">Carousel with separator</string>
    <string name="popup_library_manga_type_separator_line">Line with separator</string>
    <string name="popup_library_manga_type_line">Line</string>

    <!-- POPUP LIBRARY - Book -->
    <string name="popup_library_book_tab_item_ordering">Order</string>
    <string name="popup_library_book_tab_item_filter">Filter</string>
    <string name="popup_library_book_tab_item_type">Grid</string>

...
    <string name="vocabulary_manga_favorite">Favorite</string>
    <string name="vocabulary_book_favorite">Favorite</string>
    <string name="vocabulary_manga_button">Manga</string>
    <string name="vocabulary_book_button">Book</string>
    <string name="vocabulary_tatoeba_button">Tatoeba</string>

    <string name="vocabulary_import_title">Importing vocabulary</string>
    <string name="vocabulary_import">Importing vocabulary from %s.</string>
    <string name="vocabulary_imported">Completed vocabulary import.</string>
    <string name="vocabulary_import_error">Error importing vocabulary.</string>
    <string-array name="import_vocabulary">
        <item>Default</item>
        <item>All files</item>
...
