...
        android:paddingLeft="5dp"
        android:paddingTop="1dp"
        android:paddingRight="5dp">

        <!-- Title, secondary and supporting text -->
        <TextView
            android:id="@+id/manga_line_text_title"
            style="@style/TextTitle.Line.Title.Manga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="1dp"
            android:paddingStart="2dp"
            android:textSize="@dimen/manga_line_title_size"
...
                    android:layout_height="@dimen/manga_grid_subtitle_big"
                    android:background="@drawable/ico_subtitles_border"
                    android:src="@drawable/ico_subtitles_exist"
                    android:visibility="gone"/>

                <LinearLayout
                    android:id="@+id/manga_line_favorite"
                    android:layout_width="@dimen/manga_grid_config_content_big"
                    android:layout_height="@dimen/manga_grid_config_content_big"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/manga_line_favorite_icon"
                        style="@style/IconFavorite.Manga"
...
                        android:layout_height="@dimen/manga_grid_config_big"
                        android:background="@drawable/ico_favorite_mark_border"
                        android:src="@drawable/ico_favorite_unmark"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/manga_line_config"
                    android:layout_width="@dimen/manga_grid_favorite_content_big"
                    android:layout_height="@dimen/manga_grid_favorite_content_big"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/manga_line_config_icon"
                        style="@style/IconConfig.Manga"
...
